--- a/index.html
+++ b/index.html
@@ -661,10 +661,10 @@
       <div class="show-homepage-menu">
         <div id="homepage" class="hide">
           <button style="width:100px !important; padding:6px; margin:4px; margin-left:12px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
-          <button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px; background-color:#ff6600" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
+          <button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
           <span class="hide-homepage">
-          <span style="font-weight:normal;font-size:13px">ID: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
-          <span style="font-weight:normal; font-size:13px"> - ACTIVATED: [ <span id="email_Verified"></span> ]</span>
+          <span style="font-weight:normal;font-size:13px">hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
+          <span style="font-weight:normal; font-size:13px"> [ <span id="email_Verified"></span> ]</span>
           </span>
           <button id="verify" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px; background-color:red">Verify E-Mail</button>
         </div>
