--- a/index.html
+++ b/index.html
@@ -663,8 +663,8 @@
           <button style="width:100px !important; padding:6px; margin:4px; margin-left:12px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
           <button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
           <span class="hide-homepage">
-          <span style="font-weight:normal;font-size:13px">hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
-          <span style="font-weight:normal; font-size:13px"> [ <span id="email_Verified"></span> ]</span>
+          <span style="font-weight:normal;font-size:13px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
+          <span style="font-weight:normal; font-size:13px"> [<span id="email_Verified"></span>]</span>
           </span>
           <button id="verify" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px; background-color:red">Verify E-Mail</button>
         </div>
