--- a/index.html
+++ b/index.html
@@ -536,7 +536,10 @@
       width:12px;
       }
 	  .footer {margin-top:20px; text-align:center; font-size:14px;}
-	  
+      
+	  .show-homepage-menu{
+      margin-bottom:5px;	  
+	  }
       /* -- RESPONSIVE -- */
       @media screen and (max-width:1024px){
       h1{font-size:45px}
