--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -299,6 +299,10 @@
       color:#ff6600;
       } 
       
+	  .show-homepage-menu{
+      margin-bottom:5px;	  
+	  }
+	  
       @media screen and (max-width: 1024px){
       .mikrotik-logo {
       display: none;
@@ -425,7 +429,9 @@
         <li><a href="javascript:callmodal()">DONATE</a></li>
         <li><a target="_blank" href="https://fb.me/buananet.pbun">CONTACT</a></li>
       </ul>
-      <div id="homepage" class="hide">
+
+	  <div class="show-homepage-menu">
+	  <div id="homepage" class="hide">
         <button style="width:100px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
 		<span style="font-weight:normal;font-size:14px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
         
@@ -433,6 +439,7 @@
 	
       </div>
     </div>
+	</div>
     <div id="wrap">
       <div class="logo">
         <div class="logo-right" style="float:right;">   
