--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -313,12 +313,17 @@
       margin-left:10px;
       margin-right:10px;
       }
+	  
       .header{border:none; background:none}
       .header h1 {font-size:18px}
+      .logo-left{
+      margin-top:-4px;
+	  margin-bottom:10px;
+      }	  
       .logo a{
       margin-left:10px;
       margin-right:10px;
-      font-size:24px;
+      font-size:22px;
       color:#ddd !important;
       } 
       #wrap{
@@ -358,6 +363,7 @@
       .header-right {
       float:right;
       margin-top:-8px;
+	  margin-bottom:15px;
       }	  
       }
       @media screen and (max-width: 600px){
