--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
       <h3>// MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h3>
       <div class="row">
         <div class="column">
-          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">Mikrotik RouterOS Script Database</a><img class="member-only" title="Member only" src="./img/user.png"></p>
+          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">MikroTik RouterOS Script Database</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
         <div class="column">
           <p><a target="_blank"  href="https://router-os.github.io/">MikroTik RouterOS Search Script</a></p>
@@ -771,8 +771,8 @@
       <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ PROTECTION // BACKUP</span></div>
       <div class="row">
         <div class="column">
-          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hide-my-router-from-isp.html">Mikrotik Ninja: Hide Routerboard info from ISP</a><img class="member-only" title="Member only" src="./img/user.png"></p>
-          <p><a target="_blank"  href="https://buananetpbun.github.io/advanced-mikrotik-protection.html">Advanced Mikrotik Router-OS Protection</a><img class="member-only" title="Member only" src="./img/user.png"></p>
+          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hide-my-router-from-isp.html">MikroTik Ninja: Hide Routerboard info from ISP</a><img class="member-only" title="Member only" src="./img/user.png"></p>
+          <p><a target="_blank"  href="https://buananetpbun.github.io/advanced-mikrotik-protection.html">Advanced MikroTik Router-OS Protection</a><img class="member-only" title="Member only" src="./img/user.png"></p>
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-backup-to-mail.html">Auto Backup to Mail</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
         <div class="column">
@@ -811,18 +811,18 @@
       <h3>// MIKROTIK MOBILE TOOLS OFFICIAL</h3>
       <div class="row">
         <div class="column">
-          <p><a target="_blank" rel="nofollow"  href="https://apps.apple.com/id/app/mikrotik/id1323064830?l=id">Mikrotik Winbox iPhone</a></p>
-          <p><a target="_blank" rel="nofollow"  href="https://play.google.com/store/apps/details?id=com.mikrotik.android.tikapp&hl=in">Mikrotik Winbox Android</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://apps.apple.com/id/app/mikrotik/id1323064830?l=id">MikroTik Winbox iPhone</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://play.google.com/store/apps/details?id=com.mikrotik.android.tikapp&hl=in">MikroTik Winbox Android</a></p>
         </div>
         <div class="column">
-          <p><a target="_blank" rel="nofollow"  href="https://play.google.com/store/apps/details?id=com.mikrotik.android.mikrotikhome">Mikrotik HOME</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://play.google.com/store/apps/details?id=com.mikrotik.android.mikrotikhome">MikroTik HOME</a></p>
           <p><a target="_blank" rel="nofollow"  href="https://play.google.com/store/apps/details?id=com.mikrotik.android.bt5">MikroTik Beacon Manager</a></p>
         </div>
       </div>
       <h3>// MIKROTIK ROUTEROS SOFTWARE DOWNLOAD OFFICIAL</h3>
       <div class="row">
         <div class="column">
-          <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/download">Mikrotik.com/download</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/download">Mikrotik.com</a></p>
         </div>
         <div class="column">
           <p><a target="_blank" rel="nofollow"  href="http://www.routeros.co.id">Routeros.co.id</a></p>
@@ -846,7 +846,7 @@
           <p><a target="_blank" rel="nofollow"  href="https://www.mikrotik.id/artikel_lihat.php?id=215">Traffic Monitor with Cacti linux</a></p>
           <p><a target="_blank" rel="nofollow"  href="http://www.routerboard.co.id/">RouterBoard Comparison Table</a></p>
           <p><a target="_blank" rel="nofollow"  href="http://www.irouteros.com/duibi/duibi.php">MikroTik Product Comparison</a></p>
-          <p><a target="_blank" rel="nofollow"  href="http://www.mikrotik.co.id/test_proxy.php">RAM Proxy Mikrotik Calculator</a></p>
+          <p><a target="_blank" rel="nofollow"  href="http://www.mikrotik.co.id/test_proxy.php">RAM Proxy MikroTik Calculator</a></p>
           <p><a target="_blank" rel="nofollow"  href="http://www.mikrotik.co.id/getfile.php?nf=neighbour.zip">Neighbour Viewer dan Mac Telnet</a></p>
         </div>
         <div class="column">
