--- a/index.html
+++ b/index.html
@@ -754,15 +754,15 @@
         </div>
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-username-password-hotspot-generator.html">Username Password Hotspot Creator</a><img class="member-only" title="Member only" src="./img/user.png"></p>
-          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-share-user-multi-login.html">Bandwidth Share (Up-To) Hotspot User</a><img class="member-only" title="Member only" src="./img/user.png"></p>
-          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-expired-isolate-pppoe-hotspot.html">Expired Notification for Hotspot, PPPoE, Static IP</a><img class="member-only" title="Member only" src="./img/user.png"></p>
+          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-share-user-multi-login.html">Bandwidth Share (Up-To) for Hotspot</a><img class="member-only" title="Member only" src="./img/user.png"></p>
+          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-expired-isolate-pppoe-hotspot.html">Expired Notification Hotspot, PPPoE & Static IP</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
       </div>
       <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ DNS <span style="color:#ff6600">//</span> NETWATCH <span style="color:#ff6600">//</span> INTERFACE</span></div>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-dns-over-https-doh.html">DNS over HTTPS (DoH) Servers</a><img class="member-only" title="Member only" src="./img/user.png"></p>
-          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-netwatch-monitoring.html">Send Netwatch Monitoring to Telegram, Whatsapp</a><img class="member-only" title="Member only" src="./img/user.png"></p>
+          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-netwatch-monitoring.html">Netwatch to Telegram, Whatsapp, SMS & E-mail</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-bonding-interface.html">Bonding Interface / Link Aggregation</a><img class="member-only" title="Member only" src="./img/user.png"></p>
