--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/simple-queue-generator-shared.html">Simple Queue + Bandwidth Shared (Up-To)</a><img class="member-only" title="Member only" src="./img/user.png"></p>
           <p><a target="_blank"  href="https://buananetpbun.github.io/queue-tree-generator-shared.html">Queue Tree + Bandwidth Shared (Up-To)</a><img class="member-only" title="Member only" src="./img/user.png"></p>
-          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ for Queue Tree and Queue Simple</a><img class="member-only" title="Member only" src="./img/user.png"></p>
+          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ for Queue Tree or Queue Simple</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
       </div>
       <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ HOTSPOT <span style="color:#ff6600">//</span> PPPOE</span></div>
