--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Free MikroTik RouterOS Online Tools - By BuanaNETPBun.Github.io</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport'>
-    <meta content='Free MikroTik RouterOS Online Tools, the most complete Router tools to make it easier for you maker RouterOS Mikrotik scripts!
+	<title>Free MikroTik RouterOS Online Tools Generator - BuanaNETPBun.Github.io</title>
+    <meta content='Free MikroTik RouterOS Online Tools Generator, the most complete Router tools to make it easier for you maker RouterOS Mikrotik scripts!
       By BuanaNETPBun.Github.io' name='description'>
     <meta content='tool, pcc, queue, vpn, setting mikrotik, mikrotik, router, winbox, termimal, rsc, script, hotspot, wirelessm rtrwnet' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta name="google-site-verification" content="VjnLBZ-ypbNyJxYE9KWmaIHeQ3K-4GO4h8Ddb1zMD28" >
-    <meta property="og:title" content="MikroTik Online Tools (Unofficial) By BuanaNET-Pbun">
-    <meta property="og:description" content="MikroTik Online Tools (Unofficial) By BuanaNET-Pbun">
+    <meta property="og:title" content="Free MikroTik RouterOS Online Tools Generator - BuanaNETPBun.Github.io">
+    <meta property="og:description" content="Free MikroTik RouterOS Online Tools Generator, the most complete Router tools to make it easier for you maker RouterOS Mikrotik scripts!
+      By BuanaNETPBun.Github.io">
     <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/157738242-2c4de210-d8b6-4f7c-ab3a-b420ab3835ec.png">
-    <meta property="og:image:alt" content="MikroTik Online Tools (Unofficial) By BuanaNET-Pbun">
+    <meta property="og:image:alt" content="BuanaNETPBun.Github.io">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://buananetpbun.github.io">
     <meta name="yandex-verification" content="2185da3345ca44f7" >
