--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MikroTik Script RouterOS - BuanaNETPBun.Github.io</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>MikroTik Script RouterOS DataBase - BuanaNETPBun.Github.io</title>
     <meta content='Complete MikroTik RouterOS Script DataBase Unoffical, Enjoy the most complete script to make it easier for you to learn Mikrotik RouterOS scripts!' name='description'>
     <meta content='RouterOS, Mikrotik Script, load balancing, pcc, LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
