--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
       <h3>// MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h3>
       <div class="row">
         <div class="column">
-          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">MikroTik RouterOS Script Database</a><img class="member-only" title="Member only" src="./img/user.png"></p>
+          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">MikroTik RouterOS Script DataBase</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
         <div class="column">
           <p><a target="_blank"  href="https://router-os.github.io/">MikroTik RouterOS Search Script</a></p>
