--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
       h1{font-size:40px}
       .content {
       width:100% !important;
-      padding:8px;
+      padding:15px;
       }
       .mymenu {
       width:100% !important;
@@ -623,8 +623,7 @@
       padding-left:0px;
       padding-right:0px;
       } 
-      .mymenu ul {
-      background: none !important;
+      .mymenu ul {background: none !important;
       justify-content: center;
       display: flex;
       } 
