--- a/index.html
+++ b/index.html
@@ -581,6 +581,11 @@
       }
 	  .footer {margin-bottom:20px}
 	  }
+      @media screen and (max-width:700px){
+	  h1{
+	  font-size: 35px;
+	  }
+		}	  
       @media screen and (max-width:600px){
 	  
       .logo-left a{
