--- a/login/index.html
+++ b/login/index.html
@@ -40,7 +40,7 @@
         <span style="font-weight:bold; font-size:14px">USER UID <span style="margin-left:70px;margin-right:6px">:</span> <span style="color:#ff6600;font-weight:bold;" id="user-id"></span></span><br><br>
         <span style="font-weight:bold; font-size:14px">YOUR NAME <span style="margin-left:48px;margin-right:6px">:</span> <span style="color:#ff6600;font-weight:bold;" id="your-name"></span></span>
         <br><br><br>
-        <button  id="back-home" onclick="location.href = 'https://buananetpbun.github.io'">Back Home</button>
+        <button  id="back-home" onclick="history.back()">Back Home</button>
         <button  id="edit-user" onclick="CallModalChangeProfileShow()">Edit Profile</button>
         <button  onclick="CallModalChangePasswordShow()">Set Password</button>
         <button  id="delete-user" onclick="DeleteMember()">Delete Account</button>
