--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -412,6 +412,11 @@
       }	  
       }
 	  @media screen and (max-width:500px){
+	  .show-homepage-menu{
+      display: flex;
+      justify-content: center;
+      width:100%;
+}	  
 	  .hide-homepage {display:none}
 	  }	  
     </style>
