--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
 	  }
 		}	  
       @media screen and (max-width:600px){
-	  
+	  .content, .mymenu {border-radius: 0}
       .logo-left a{
       padding-top:5px !important;
        font-size:18px;
