--- a/index.html
+++ b/index.html
@@ -688,7 +688,10 @@ border: 2px solid #292929;
         <div id="homepage" class="hide">
           <button style="width:100px !important; padding:6px; margin:4px; margin-left:12px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
           <button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
-          <span class="hide-homepage">
+                    <span class="hide-homepage">
+		  <span class="avatar">
+          <img alt="avatar" id="myavatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png" >
+         </span>
 		 <span class="avatar">
           <img alt="avatar" id="myavatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png" >
          </span>
