--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
       position: relative;
       padding-left:10px;
       padding-right:10px;
+	  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
       }
       .mymenu ul {
       list-style-type: none;
