--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
       clear: both;
       }
       .member-only{
-      cursor: pointer; 
+	  cursor: help;
       margin-left:5px;
       height:13px;
       width:12px;
@@ -691,7 +691,7 @@
           <img alt="avatar" id="myavatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png" >
           </span>
           <span style="font-weight:normal;font-size:13px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
-          <span style="font-weight:normal; font-size:13px"> [<span id="email_Verified"></span>]</span>
+          <span style="font-weight:normal; font-size:13px"> [<span id="email_Verified" title="E-mail verified status" style="cursor: help;"></span>]</span>
           </span>
           <button id="verify" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px; background-color:red">Verify E-Mail</button>
         </div>
