--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -444,7 +444,7 @@
           <img alt="avatar" id="myavatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png" >
           </span>
           <span style="font-weight:normal;font-size:13px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
-          <span style="font-weight:normal; font-size:13px"> [<span id="email_Verified"></span>]</span>
+          <span style="font-weight:normal; font-size:13px"> [<span id="email_Verified" title="E-mail verified status" style="cursor: help;"></span>]</span>
           </span>
         </div>
       </div>
