--- a/index.html
+++ b/index.html
@@ -259,15 +259,14 @@
       .mymenu {
       margin: 0 auto;
       background-color: #f9f9f9;
-      width:auto;
-      border-radius: 5px;
+      width: 700px;
+      border-radius: 0 0 5px 5px;
       border: 2px solid #f9f9f9;
       font-weight: bold;
       font-size: 15px;
       position: relative;
       padding-left:10px;
       padding-right:10px;
-	  margin-bottom:20px;
 	  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
       }
       .mymenu ul {
@@ -668,7 +667,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>  
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script>
-    <div class="content">
     <div id="mymenu" class="mymenu">
       <div class="mikrotik-logo" >
         <img alt="mikrotik" src="./img/made-for-mikrotik.png">
@@ -699,7 +697,7 @@
         </div>
       </div>
     </div>
-
+    <div class="content">
       <div style="width:100%; margin-top:10px"></div>
       <div style="float:left; margin-right:5px; margin-top:8px">
         <div class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
