--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@ $(document).ready(function(){
     <div class="content">
 	
 	      <div class="terminal">    
-        <img src="./img/terminal.png" alt="Hits">
+        <img src="./img/terminal.png" alt="MikroTik Terminal">
       </div>
 	  
 	      
