--- a/index.html
+++ b/index.html
@@ -556,12 +556,15 @@
       border: 2px solid #292929;
       }
       .terminal {
-      margin-bottom:5px;
+      margin-bottom:15px;
       width:100%; 
       }
       .terminal img {
       max-width: 100%;
       height: auto;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
       }
       /* -- RESPONSIVE -- */
       @media screen and (max-width:1024px){
