--- a/index.html
+++ b/index.html
@@ -563,6 +563,8 @@
       max-width: 100%;
       height: auto;
       display: block;
+      margin-left: auto;
+      margin-right: auto;
       }
       /* -- RESPONSIVE -- */
       @media screen and (max-width:1024px){
