--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
       margin:0;
       }    	  
       .gsib_a{height:30px; padding-left:10px !important; }
-      .gsc-input input{background:#fff !important; }
+      .gsc-input input{font-size:14px; color:#333; background:#fff !important; }
       .gsc-input-box {border-radius:5px; height:33px;background:#fff !important;margin-right: -6px !important; line-height:normal !important}
       .gsc-search-button-v2 {border-radius:5px !important; height:33px !important;}
       .gsc-control-cse {background:#f9f9f9 !important;border:none !important; clear: both;}
