--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
       <div class="terminal">    
         <img src="./img/terminal.png" alt="MikroTik Terminal">
       </div>
-      <div style="float:left; margin-right:5px; margin-top:8px">
+      <div style="float:left; margin-right:5px; margin-top:8px; ">
         <div class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
       </div>
       <div style="float:left;margin-top:8px">    
