--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta name="yandex-verification" content="2185da3345ca44f7" >
     <script async defer src="https://buttons.github.io/buttons.js"></script>   
     <style>
+
       /* --------------------------------------------
       ################################################
       # Tools For Mikrotik By BuanaNETPBun.Github.io
@@ -40,8 +41,9 @@
       padding:0;
       color:#292929;
       }
-      h1, h2 {font-size: 50px; margin-bottom:0px; color:#292929;display:inline;line-height:1.4;clear:both}
-      h3, h4, h5, h6{ font-size:17px; color:#292929;border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px; line-height:1.4}
+      h1{font-size: 52px; font-weight:500; margin-bottom:0px; color:#292929;display:inline;clear:both}
+	  h2{font-weight:600; font-size:20px; color:#292929;border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px;}
+      h3, h4, h5, h6{font-weight:normal; font-size:17px; color:#292929; margin-bottom:10px; padding-bottom:10px;}
       pre {
       white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
       white-space: -pre-wrap; /* Opera */
@@ -671,6 +673,7 @@
       font-size: 10pt;
       }
       }
+    
     </style>
   </head>
   <body>
@@ -740,8 +743,8 @@
       <div style="margin-bottom:-15px; margin-top:-12px">
         <div class="gcse-searchresults"></div>
       </div>
-      <h1>MikroTik Router<span style="font-style: italic;">OS</span> Script and Tools</h1>
-      <h3>// MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h3>
+      <h1>MikroTik RouterOS</span> Script and Tools</h1>
+      <h2>// MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h3>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">MikroTik RouterOS Script DataBase</a><img class="member-only" title="Member only" src="./img/user.png"></p>
@@ -750,8 +753,8 @@
           <p><a target="_blank"  href="https://router-os.github.io/">MikroTik RouterOS Search Script</a></p>
         </div>
       </div>
-      <h3>// MIKROTIK ROUTEROS SCRIPT GENERATOR</h3>
-      <span style="font-size:16px;font-weight:bold;">☰ ROUTE <span style="color:#ff6600">//</span> MANGLE <span style="color:#ff6600">//</span> NAT</span>
+      <h2>// MIKROTIK ROUTEROS SCRIPT GENERATOR</h3>
+      <span style="font-size:16px;font-weight:500;">☰ ROUTE <span style="color:#ff6600">//</span> MANGLE <span style="color:#ff6600">//</span> NAT</span>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/pcc.html">Load Balancing PCC</a><img class="member-only" title="Member only" src="./img/user.png"></p>
@@ -770,7 +773,7 @@
           <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator2.html">VPN Routing IP Address Games</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
       </div>
-      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold; ">☰ SIMPLE QUEUE <span style="color:#ff6600">//</span> QUEUE TREE <span style="color:#ff6600">//</span> QUEUE TYPE</span></div>
+      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:500; ">☰ SIMPLE QUEUE <span style="color:#ff6600">//</span> QUEUE TREE <span style="color:#ff6600">//</span> QUEUE TYPE</span></div>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-burst-limit-calculator.html">Burst Limit Calculator</a><img class="member-only" title="Member only" src="./img/user.png"></p>
@@ -783,7 +786,7 @@
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ for Queue Tree or Queue Simple</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
       </div>
-      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ HOTSPOT <span style="color:#ff6600">//</span> PPPOE</span></div>
+      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:500">☰ HOTSPOT <span style="color:#ff6600">//</span> PPPOE</span></div>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-qr-code-generator.html">Free Hotspot Wi-Fi QR Code</a><img class="member-only" title="Member only" src="./img/user.png"></p>
@@ -796,7 +799,7 @@
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-expired-isolate-pppoe-hotspot.html">Expired Notification Hotspot + PPPoE</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
       </div>
-      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ DNS <span style="color:#ff6600">//</span> NETWATCH <span style="color:#ff6600">//</span> INTERFACE</span></div>
+      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:500">☰ DNS <span style="color:#ff6600">//</span> NETWATCH <span style="color:#ff6600">//</span> INTERFACE</span></div>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-dns-over-https-doh.html">DNS over HTTPS (DoH) Servers</a><img class="member-only" title="Member only" src="./img/user.png"></p>
@@ -806,7 +809,7 @@
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-bonding-interface.html">Bonding Interface / Link Aggregation</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
       </div>
-      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ PROTECTION <span style="color:#ff6600">//</span> BACKUP</span></div>
+      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:500">☰ PROTECTION <span style="color:#ff6600">//</span> BACKUP</span></div>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hide-my-router-from-isp.html">MikroTik Ninja: Hide Routerboard from ISP</a><img class="member-only" title="Member only" src="./img/user.png"></p>
@@ -818,7 +821,7 @@
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-website-generator.html">Block Websites Generator</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
       </div>
-      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ ROUTEROS OTHER TOOLS</span></div>
+      <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:500">☰ ROUTEROS OTHER TOOLS</span></div>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://buananetpbun.github.io/pcc-calculation.html">Load Balancing PCC Calculation</a><img class="member-only" title="Member only" src="./img/user.png"></p>
@@ -828,7 +831,7 @@
           <p><a target="_blank"  href="https://buananetpbun.github.io/wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
       </div>
-      <h3>// MIKROTIK TOOLS AND LOGO DESIGNS OFFICIAL</h3>
+      <h2>// MIKROTIK TOOLS AND LOGO DESIGNS OFFICIAL</h3>
       <div class="row">
         <div class="column">
           <p><a target="_blank" rel="nofollow"  href="https://mt.lv/winbox64">Winbox-64 (64bit)</a></p>
@@ -845,7 +848,7 @@
           <p><a target="_blank" rel="nofollow"  href="https://designs.mikrotik.com/">MikroTik Logo, Walpaper, T-Shirt</a></p>
         </div>
       </div>
-      <h3>// MIKROTIK MOBILE TOOLS OFFICIAL</h3>
+      <h2>// MIKROTIK MOBILE TOOLS OFFICIAL</h3>
       <div class="row">
         <div class="column">
           <p><a target="_blank" rel="nofollow"  href="https://apps.apple.com/id/app/mikrotik/id1323064830?l=id">MikroTik Winbox iPhone</a></p>
@@ -856,7 +859,7 @@
           <p><a target="_blank" rel="nofollow"  href="https://play.google.com/store/apps/details?id=com.mikrotik.android.bt5">MikroTik Beacon Manager</a></p>
         </div>
       </div>
-      <h3>// MIKROTIK ROUTEROS SOFTWARE DOWNLOAD OFFICIAL</h3>
+      <h2>// MIKROTIK ROUTEROS SOFTWARE DOWNLOAD OFFICIAL</h3>
       <div class="row">
         <div class="column">
           <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/download">Mikrotik RouterOS Download Official</a></p>
@@ -865,7 +868,7 @@
           <p><a target="_blank" rel="nofollow"  href="http://www.routeros.co.id">Routeros.co.id (Indonesia Server)</a></p>
         </div>
       </div>
-      <h3>// MIKROTIK WIRELESS TOOLS OFFICIAL</h3>
+      <h2>// MIKROTIK WIRELESS TOOLS OFFICIAL</h3>
       <div class="row">
         <div class="column">
           <p><a target="_blank" rel="nofollow"  href="http://www.mikrotik.co.id/test_tower.php">Antenna Height Calculation</a></p>
@@ -877,7 +880,7 @@
           <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/client/distributorLockpack">Lockpack creator (need login)</a></p>
         </div>
       </div>
-      <h3>// MIKROTIK TOOLS LIKE CALCULATOR AND MONITOR</h3>
+      <h2>// MIKROTIK TOOLS LIKE CALCULATOR AND MONITOR</h3>
       <div class="row">
         <div class="column">
           <p><a target="_blank" rel="nofollow"  href="https://www.mikrotik.id/artikel_lihat.php?id=215">Traffic Monitor with Cacti linux</a></p>
@@ -893,7 +896,7 @@
           <p><a target="_blank" rel="nofollow"  href="https://www.mkesolutions.net/pdf/routeros-cheat-sheet-v1.1.pdf">PDF RouterOS Console Cheat Sheet</a></p>
         </div>
       </div>
-      <h3>// MIKROTIK BILLING HOTSPOT / RADIUS / USERMANAGER</h3>
+      <h2>// MIKROTIK BILLING HOTSPOT / RADIUS / USERMANAGER</h3>
       <div class="row">
         <div class="column">
           <p><a target="_blank" rel="nofollow"  href="https://freeradius.org">FREERADIUS</a></p>
@@ -913,7 +916,7 @@
           <p><a target="_blank" rel="nofollow"  href="https://www.daloradius.com/">Daloradius</a></p>
         </div>
       </div>
-      <h3>// OTHER MIKROTIK BATCH TOOLS</h3>
+      <h2>// OTHER MIKROTIK BATCH TOOLS</h3>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://github.com/buananetpbun/FREE-DNS-PING-TEST-DOS-BATCH">Batch: DNS Ping Test</a></p>
